--- a/style.css
+++ b/style.css
@@ -234,10 +234,20 @@ img {
     justify-content: space-evenly;
     padding: 20px 0;
     position: static;
+    overflow: hidden;
+    width: 100%;
+    background-color: #fff;
+    position: fixed;
+    bottom: 0;
+    padding: 5px 0px;
+    opacity: 0.8;
 }
 
 .nav {
     margin: 0 20px;
+    text-decoration: none;
+    color: #000000;
+    cursor: pointer;
 }
 
 .nav a {
